--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,8 @@ name = "cache-locality-experiment"
 version = "0.1.0"
 edition = "2024"
 
-[dependencies]
-
 [dev-dependencies]
 criterion = "0.7.0"
+
+[dependencies]
+gif = "0.13.3"
